<resources>
    <string name="app_name">Petworld</string>
    <string name="title_activity_maps">Map</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="walk_title">산책하기</string>
    <string name="walk_title_list">산책일기</string>
    <string name="pet_infomation_list">반려견 정보</string>
    <string name="hint_id">ID를 입력하세요</string>

    <string name="hint_password">Password를 입력하세요</string>

    <string name="hint_email">이메일주소를 입력하세요</string>

    <string name="btn_login">로그인</string>

    <string name="btn_register">회원가입</string>

    <string name="btn_link_to_register">비회원이세요? 회원가입 신청</string>

    <string name="btn_link_to_login">Already registred! Login Me.</string>

    <string name="welcome">Welcome</string>

    <string name="btn_logout">로그아웃</string>
</resources>
